--- a/Tielman/Project/mHealth/mHealth.ipynb
+++ b/Tielman/Project/mHealth/mHealth.ipynb
@@ -21,7 +21,22 @@
     "11. Running (1 min)\n",
     "12. Jump front & back (20x)\n",
     "\n",
-    "It is based on 23 different sensor inputs:\n",
+    "343,195 samples with an affiliated activity\n",
+    "\n",
+    "It is based on 4 sensors placed on the body,\n",
+    "\n",
+    "- 2-lead ECG\n",
+    "- 3 monitors placed around body\n",
+    "    - Locations\n",
+    "        - Chest\n",
+    "        - Left ankle\n",
+    "        - Right lower-arm\n",
+    "    - Sensors\n",
+    "        - Accelerometer (X, Y, Z)\n",
+    "        - Gyroscope (X, Y, Z)\n",
+    "        - Magnetometer (X, Y, Z)\n",
+    "\n",
+    "Data based on 23 different sensor inputs:\n",
     "\n",
     "1. acceleration from the chest sensor (X axis)\n",
     "2. acceleration from the chest sensor (Y axis)\n",
@@ -11381,7 +11396,7 @@
    "source": [
     "### Assessing Relationships\n",
     "\n",
-    "Given discoveries above, examine likely correlations in the data"
+    "Given discoveries above, examine likely correlations in the data."
    ]
   },
   {
@@ -23171,12 +23186,214 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This demonstrates quite clearly KNN singnificantly outperfoms other classifiers. More specifically:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>F-Measure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1 </th>\n",
+       "      <td> 0.986560</td>\n",
+       "      <td> 0.888889</td>\n",
+       "      <td> 0.427046</td>\n",
+       "      <td> 0.576923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2 </th>\n",
+       "      <td> 0.987247</td>\n",
+       "      <td> 0.912409</td>\n",
+       "      <td> 0.446429</td>\n",
+       "      <td> 0.599520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3 </th>\n",
+       "      <td> 0.987247</td>\n",
+       "      <td> 0.900000</td>\n",
+       "      <td> 0.431734</td>\n",
+       "      <td> 0.583541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4 </th>\n",
+       "      <td> 0.987018</td>\n",
+       "      <td> 0.900000</td>\n",
+       "      <td> 0.465517</td>\n",
+       "      <td> 0.613636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5 </th>\n",
+       "      <td> 0.987553</td>\n",
+       "      <td> 0.902256</td>\n",
+       "      <td> 0.444444</td>\n",
+       "      <td> 0.595533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6 </th>\n",
+       "      <td> 0.987858</td>\n",
+       "      <td> 0.905660</td>\n",
+       "      <td> 0.500000</td>\n",
+       "      <td> 0.644295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7 </th>\n",
+       "      <td> 0.987934</td>\n",
+       "      <td> 0.923611</td>\n",
+       "      <td> 0.475000</td>\n",
+       "      <td> 0.627358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8 </th>\n",
+       "      <td> 0.987171</td>\n",
+       "      <td> 0.903704</td>\n",
+       "      <td> 0.440433</td>\n",
+       "      <td> 0.592233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9 </th>\n",
+       "      <td> 0.987171</td>\n",
+       "      <td> 0.917241</td>\n",
+       "      <td> 0.460208</td>\n",
+       "      <td> 0.612903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td> 0.987247</td>\n",
+       "      <td> 0.913333</td>\n",
+       "      <td> 0.470790</td>\n",
+       "      <td> 0.621315</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Test Accuracy  Precision    Recall  F-Measure\n",
+       "1        0.986560   0.888889  0.427046   0.576923\n",
+       "2        0.987247   0.912409  0.446429   0.599520\n",
+       "3        0.987247   0.900000  0.431734   0.583541\n",
+       "4        0.987018   0.900000  0.465517   0.613636\n",
+       "5        0.987553   0.902256  0.444444   0.595533\n",
+       "6        0.987858   0.905660  0.500000   0.644295\n",
+       "7        0.987934   0.923611  0.475000   0.627358\n",
+       "8        0.987171   0.903704  0.440433   0.592233\n",
+       "9        0.987171   0.917241  0.460208   0.612903\n",
+       "10       0.987247   0.913333  0.470790   0.621315"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = pd.DataFrame()\n",
+    "foldNum = 0;\n",
+    "for train, test in kf: \n",
+    "    foldNum += 1\n",
+    "    fold_res = []\n",
+    "    \n",
+    "    if(verbose):\n",
+    "        print \"train: \"+str(train.shape)\n",
+    "        print \"test: \"+str(test.shape)\n",
+    "\n",
+    "    splitCtr += 1\n",
+    "\n",
+    "    # Create t/t split\n",
+    "    X_train, X_test, y_train, y_test = X_pca.iloc[train], X_pca.iloc[test], y.iloc[train], y.iloc[test]\n",
+    "\n",
+    "    if(verbose):\n",
+    "        print \"X_train: \"+str(X_train.shape)\n",
+    "        print \"X_test: \"+str(X_test.shape)\n",
+    "        print \"y_train: \"+str(y_train.shape)\n",
+    "        print \"y_test: \"+str(y_test.shape)\n",
+    "\n",
+    "    # Build model using passed classifier\n",
+    "    classifier = neighbors.KNeighborsClassifier(knnN)\n",
+    "    clf = classifier.fit(X_train, y_train)\n",
+    "\n",
+    "    # Get t/t accuracy scores - not reported currently\n",
+    "    training_accuracy = clf.score(X_train, y_train)\n",
+    "    test_accuracy = clf.score(X_train, y_train)\n",
+    "\n",
+    "    # Get array of prediction results\n",
+    "    y_train_predicted = clf.predict(X_train)\n",
+    "\n",
+    "    # Calculate prec, rec and ROC AUC\n",
+    "    acc = metrics.accuracy_score(y_train, y_train_predicted)\n",
+    "    prec = metrics.precision_score(y_train, y_train_predicted)\n",
+    "    rec = metrics.recall_score(y_train, y_train_predicted)\n",
+    "    f = metrics.f1_score(y_train, y_train_predicted)\n",
+    "    #auc = metrics.roc_auc_score(y_train, y_train_predicted)\n",
+    "\n",
+    "    # Append AUC to array of classifier results\n",
+    "    col_f.append(f)\n",
+    "\n",
+    "    fold_res.append(acc)\n",
+    "    fold_res.append(prec)\n",
+    "    fold_res.append(rec)\n",
+    "    fold_res.append(f)\n",
+    "    \n",
+    "    res[foldNum] = fold_res\n",
+    "    \n",
+    "res = res.transpose()\n",
+    "res.columns = [\"Test Accuracy\",\"Precision\", \"Recall\", \"F-Measure\"]\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Test Accuracy    0.987300\n",
+       "Precision        0.906710\n",
+       "Recall           0.456160\n",
+       "F-Measure        0.606726\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Averages\n",
+    "res.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "This demonstrates quite clearly KNN singnificantly outperfoms other classifiers.\n",
-    "\n",
     "### KNN Breakdown by Activity\n",
     "\n",
     "A logical question is how well the model can predict different activities. The following analysis runs the KNN classifier for each activity."
