--- a/Tielman/Project/mHealth/mHealth.ipynb
+++ b/Tielman/Project/mHealth/mHealth.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Activity-tracker calculations: Learning from the MHealth activity dataset\n",
+    "# Playing Fitbit: Predicting subject activity in the MHealth dataset\n",
     "\n",
-    "The [MHealth dataset](http://archive.ics.uci.edu/ml/datasets/MHEALTH+Dataset) includes data from sensors on different parts of the body while doing 12 different exercises:\n",
+    "The [MHealth dataset](http://archive.ics.uci.edu/ml/datasets/MHEALTH+Dataset) includes data from sensors on different parts of the subject's body while performing 12 different exercises:\n",
     "\n",
     "1. Standing still (1 min)\n",
     "2. Sitting and relaxing (1 min)\n",
@@ -21,9 +21,9 @@
     "11. Running (1 min)\n",
     "12. Jump front & back (20x)\n",
     "\n",
-    "343,195 samples with an affiliated activity\n",
+    "The dataset includes 1,215,745 samples, 343,195 labeled with a known activity.\n",
     "\n",
-    "It is based on 4 sensors placed on the body,\n",
+    "It is based on 4 sensors placed on the body:\n",
     "\n",
     "- 2-lead ECG\n",
     "- 3 monitors placed around body\n",
@@ -33,7 +33,7 @@
     "        - Right lower-arm\n",
     "    - Sensors\n",
     "        - Accelerometer (X, Y, Z)\n",
-    "        - Gyroscope (X, Y, Z)\n",
+    "        - Gyroscope (X, Y, Z) - *not on chest*\n",
     "        - Magnetometer (X, Y, Z)\n",
     "\n",
     "Data based on 23 different sensor inputs:\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -79,8 +79,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full data shape: (343195, 24)\n",
-      "Reduced data shape: (14550, 24)\n"
+      "Raw data shape: (1215745, 24)\n",
+      "Labeled data shape: (343195, 24)\n",
+      "Reduced data shape: (14652, 24)\n"
      ]
     }
    ],
@@ -128,10 +129,11 @@
     "    df = pd.read_csv(\"data/mHealth_subject\"+str(i)+\".log\",index_col=None, names=cols, delimiter=\"\\t\")\n",
     "    list_.append(df)\n",
     "data = pd.concat(list_)\n",
+    "print \"Raw data shape: \"+str(data.shape)\n",
     "\n",
     "# Delete rows with no activity label\n",
     "data = data[data.Label != 0]\n",
-    "print \"Full data shape: \"+str(data.shape)\n",
+    "print \"Labeled data shape: \"+str(data.shape)\n",
     "\n",
     "# Create subset of data to reduce complexity\n",
     "data = data.loc[np.random.choice(data.index, 4000, replace=False)]\n",
@@ -23776,7 +23778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From these results, it is clear that the ECG is far less important than any of the three accelerometers for predicting subject activity. The arm accelerometer performs better than ankle or chest for most activities, perhaps indicating the push to develop activity-monitoring watches over belt-clips and such, like the original FitBit."
+    "From these results, it is clear that the ECG is far less important than any of the three accelerometers for predicting subject activity. The arm accelerometer performs better than ankle or chest for most activities, perhaps indicating the push to develop activity-monitoring watches over belt-clips and such, like the original Fitbit."
    ]
   }
  ],
