--- a/Tielman/Project/mHealth/mHealth.ipynb
+++ b/Tielman/Project/mHealth/mHealth.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Playing Fitbit: Predicting subject activity in the MHealth dataset\n",
     "\n",
-    "The [MHealth dataset](http://archive.ics.uci.edu/ml/datasets/MHEALTH+Dataset) includes data from sensors on different parts of the subject's body while performing 12 different exercises:\n",
+    "The [MHealth dataset](http://archive.ics.uci.edu/ml/datasets/MHEALTH+Dataset) from UC Irvine includes data from sensors on different parts of the subject's body while performing 12 different exercises:\n",
     "\n",
     "1. Standing still (1 min)\n",
     "2. Sitting and relaxing (1 min)\n",
