--- a/Tielman/Project/mHealth/mHealth.ipynb
+++ b/Tielman/Project/mHealth/mHealth.ipynb
@@ -155,7 +155,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -11343,22 +11344,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arm data shape: (14550, 10)\n",
-      "Ankle data shape: (14550, 9)\n",
-      "Chest data shape: (14550, 3)\n",
-      "ECG data shape: (14550, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "activityFeatures = [\"is_standing\",\"is_sitting\",\"is_lying\",\"is_walking\",\"is_climbing\",\"is_bending\",\"is_lifting_arms\",\"is_bending_knees\",\"is_cycling\",\"is_jogging\",\"is_running\",\"is_jumping\"]\n",
     "\n",
@@ -12251,9 +12241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part II: Supervised Learning\n",
-    "\n",
-    "Countless vendors have created activity-tracking devices using similar data. For pusposes of testing, we look at wrist-only data to assess our ability to accurately predict user activity."
+    "## Part II: Supervised Learning"
    ]
   },
   {
@@ -12289,7 +12277,7 @@
    "source": [
     "### Dimensionality reduction\n",
     "\n",
-    "Apply PCA for a different number of components to identify optimal number of components"
+    "Apply PCA for a different number of components to identify optimal number of components."
    ]
   },
   {
@@ -22957,7 +22945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -22984,7 +22972,7 @@
        "      <td> 0.174194</td>\n",
        "      <td> 0.057878</td>\n",
        "      <td> 0.071661</td>\n",
-       "      <td> 0.156522</td>\n",
+       "      <td> 0.211503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -22992,7 +22980,7 @@
        "      <td> 0.231707</td>\n",
        "      <td> 0.054422</td>\n",
        "      <td> 0.053156</td>\n",
-       "      <td> 0.108626</td>\n",
+       "      <td> 0.178042</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -23000,7 +22988,7 @@
        "      <td> 0.247678</td>\n",
        "      <td> 0.035714</td>\n",
        "      <td> 0.048276</td>\n",
-       "      <td> 0.107335</td>\n",
+       "      <td> 0.103896</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -23008,7 +22996,7 @@
        "      <td> 0.210843</td>\n",
        "      <td> 0.059211</td>\n",
        "      <td> 0.070064</td>\n",
-       "      <td> 0.112601</td>\n",
+       "      <td> 0.097087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -23016,7 +23004,7 @@
        "      <td> 0.173333</td>\n",
        "      <td> 0.043011</td>\n",
        "      <td> 0.074576</td>\n",
-       "      <td> 0.097130</td>\n",
+       "      <td> 0.180212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -23024,7 +23012,7 @@
        "      <td> 0.187879</td>\n",
        "      <td> 0.046667</td>\n",
        "      <td> 0.064309</td>\n",
-       "      <td> 0.107922</td>\n",
+       "      <td> 0.091476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -23032,7 +23020,7 @@
        "      <td> 0.208861</td>\n",
        "      <td> 0.054795</td>\n",
        "      <td> 0.053156</td>\n",
-       "      <td> 0.132231</td>\n",
+       "      <td> 0.072072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -23040,7 +23028,7 @@
        "      <td> 0.211838</td>\n",
        "      <td> 0.034843</td>\n",
        "      <td> 0.073090</td>\n",
-       "      <td> 0.126126</td>\n",
+       "      <td> 0.056225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -23048,7 +23036,7 @@
        "      <td> 0.132911</td>\n",
        "      <td> 0.033333</td>\n",
        "      <td> 0.063898</td>\n",
-       "      <td> 0.078078</td>\n",
+       "      <td> 0.198606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -23056,7 +23044,7 @@
        "      <td> 0.210843</td>\n",
        "      <td> 0.065574</td>\n",
        "      <td> 0.069182</td>\n",
-       "      <td> 0.087558</td>\n",
+       "      <td> 0.157360</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -23076,19 +23064,19 @@
        "9              0.621315                0.210843     0.065574   \n",
        "\n",
        "   LogisticRegression  SGDClassifier  \n",
-       "0            0.071661       0.156522  \n",
-       "1            0.053156       0.108626  \n",
-       "2            0.048276       0.107335  \n",
-       "3            0.070064       0.112601  \n",
-       "4            0.074576       0.097130  \n",
-       "5            0.064309       0.107922  \n",
-       "6            0.053156       0.132231  \n",
-       "7            0.073090       0.126126  \n",
-       "8            0.063898       0.078078  \n",
-       "9            0.069182       0.087558  "
+       "0            0.071661       0.211503  \n",
+       "1            0.053156       0.178042  \n",
+       "2            0.048276       0.103896  \n",
+       "3            0.070064       0.097087  \n",
+       "4            0.074576       0.180212  \n",
+       "5            0.064309       0.091476  \n",
+       "6            0.053156       0.072072  \n",
+       "7            0.073090       0.056225  \n",
+       "8            0.063898       0.198606  \n",
+       "9            0.069182       0.157360  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23096,9 +23084,6 @@
    "source": [
     "# Set optimal KNN n as determined above\n",
     "knnN = 3\n",
-    "\n",
-    "# Build train/set sets restricted to PCA-selected features\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.3, random_state=1234)\n",
     "\n",
     "#Debugging output?\n",
     "verbose = False\n",
@@ -23162,7 +23147,7 @@
     "        f = metrics.f1_score(y_train, y_train_predicted)\n",
     "        #auc = metrics.roc_auc_score(y_train, y_train_predicted)\n",
     "        \n",
-    "        # Append AUC to array of classifier results\n",
+    "        # Append F to col_f\n",
     "        col_f.append(f)\n",
     "        \n",
     "        if(verbose):\n",
@@ -23725,7 +23710,7 @@
     "    # Create train/test split\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X_ankle, y, test_size=0.3, random_state=1234)\n",
     "\n",
-    "    classifier = neighbors.KNeighborsClassifier(14)\n",
+    "    classifier = neighbors.KNeighborsClassifier(knnN)\n",
     "    clf = classifier.fit(X_train, y_train)\n",
     "    \n",
     "    # Get array of prediction results\n",
@@ -23741,7 +23726,7 @@
     "    X_train, X_test, y_train, y_test = train_test_split(X_chest, y, test_size=0.3, random_state=1234)\n",
     "\n",
     "    \n",
-    "    classifier = neighbors.KNeighborsClassifier(14)\n",
+    "    classifier = neighbors.KNeighborsClassifier(knnN)\n",
     "    clf = classifier.fit(X_train, y_train)\n",
     "    \n",
     "    # Get array of prediction results\n",
@@ -23756,7 +23741,7 @@
     "    # Create train/test split\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X_ecg, y, test_size=0.3, random_state=1234)\n",
     "\n",
-    "    classifier = neighbors.KNeighborsClassifier(14)\n",
+    "    classifier = neighbors.KNeighborsClassifier(knnN)\n",
     "    clf = classifier.fit(X_train, y_train)\n",
     "    \n",
     "    # Get array of prediction results\n",
